--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -68,7 +68,7 @@
             </div>
 
             <!--logo start-->
-            <a href="/" class="logo"> 智能运维系统 <span class="lite">demo</span></a>
+            <a href="/" class="logo"> HDFS智能运维系统 <span class="lite">demo</span></a>
             <!--logo end-->
 
 
